--- a/config/scaffolding/TestLowerversion2108Project.yml
+++ b/config/scaffolding/TestLowerversion2108Project.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/ArtiKhareIBM
   gitUsername: ArtiKhareIBM
   gitBranch: main
+- name: GithubPackageDebuglog
+  gitServerName: srcGithubCtrl_Arti
+  gitUrl: https://github.com/ArtiKhareIBM
+  gitUsername: ArtiKhareIBM
+  gitBranch: main
